Deal with control transfers better by

- removing the UHCI_PTR_VF flag for the setup and status stages
	  which means they are scheduled less aggressively.  Some devices
	  appear to require this (blymn@ has one).  The flag was
	  introduced as a performance improvement for bulk transfers.

	- Checking for short reads and making sure the status stage runs
	  if they're encountered.

PR/47522 Enumeration of LUFA/Atmel devices on UHCI fails

Thanks to jak@ and blymn@ for testing and mlelstv@ for comments.